--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,29 +1,6 @@
-[package]
-name = "fitgirl-ddl"
-version = "0.1.0"
-edition = "2024"
-
-[dependencies]
-
-nyquest = { version = "0.1.1", features = ["async"] }
-nyquest-preset = { version = "0.1.0", features = ["async"] }
-spdlog-rs = { version = "0.4.3", features = [
-    "level-info",
-    "release-level-info",
-    "source-location",
-] }
-
-compio = { version = "0.14.0", default-features = false, features = [
-    "runtime",
-    "io-uring",
-    "macros",
-] }
-scraper = { version = "0.23.1", features = ["atomic"] }
-argh = "0.1.13"
-futures-util = "0.3.31"
-thiserror = "2.0.12"
-url = "2.5.4"
-itertools = "0.14.0"
+[workspace]
+members = ["fitgirl-ddl-cli", "fitgirl-ddl-lib"]
+resolver = "2"
 
 [profile.release]
 lto = true
@@ -31,3 +8,12 @@ codegen-units = 1
 strip = true
 panic = "abort"
 opt-level = "s"
+
+[workspace.dependencies]
+fitgirl-ddl-lib = { path = "./fitgirl-ddl-lib" }
+nyquest = { version = "0.1.1", features = ["async"] }
+compio = { version = "0.14.0", default-features = false, features = [
+    "runtime",
+    "io-uring",
+    "macros",
+] }
