--- a/fitgirl-ddl-cli/Cargo.toml
+++ b/fitgirl-ddl-cli/Cargo.toml
@@ -8,7 +8,6 @@ name = "fitgirl-ddl"
 path = "./src/main.rs"
 
 [dependencies]
-nyquest-preset = { version = "0.1.0", features = ["async"] }
 itertools = "0.14.0"
 argh = "0.1.13"
 futures-util = "0.3.31"
@@ -20,4 +19,4 @@ spdlog-rs = { version = "0.4.3", features = [
 
 fitgirl-ddl-lib = { workspace = true }
 compio = { workspace = true }
-nyquest = { workspace = true }
+nyquest-preset = { workspace = true}
