--- a/fitgirl-ddl-cli/Cargo.toml
+++ b/fitgirl-ddl-cli/Cargo.toml
@@ -8,15 +8,11 @@ name = "fitgirl-ddl"
 path = "./src/main.rs"
 
 [dependencies]
-itertools = "0.14.0"
-argh = "0.1.13"
-futures-util = "0.3.31"
-spdlog-rs = { version = "0.4.3", features = [
-    "level-info",
-    "release-level-info",
-    "source-location",
-] }
-
 fitgirl-ddl-lib = { workspace = true }
 compio = { workspace = true }
-nyquest-preset = { workspace = true}
+nyquest-preset = { workspace = true }
+futures-util = { workspace = true }
+itertools = { workspace = true }
+spdlog-rs = { workspace = true }
+
+argh = "0.1.13"
