--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,7 +10,7 @@ jobs:
     name: Release on ${{ matrix.target }}
     runs-on: ${{ matrix.os }}
     env:
-      RUST_BIN_NAME: "fitgirl-ddl{,-gui}"
+      RUST_BIN_NAME: "fitgirl-ddl{,_gui}"
     strategy:
       fail-fast: false
       matrix:
