--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -49,16 +49,31 @@ jobs:
           prefix-key: ${{ matrix.target }}
           shared-key: "main"
       - name: Build binary
+        if: contains(matrix.target, 'linux') == false
         uses: houseabsolute/actions-rust-cross@v0
         with:
           target: ${{ matrix.target }}
           args: "--locked --release"
           strip: true
+      - name: Build binary (Linux)
+        if: contains(matrix.target, 'linux')
+        uses: houseabsolute/actions-rust-cross@v0
+        with:
+          target: ${{ matrix.target }}
+          args: "--locked --release --bin fitgirl-ddl"
+          strip: true
       - name: Prepare assets
         shell: bash
+        if: contains(matrix.target, 'linux') == false
         run: |
-          mv target/${{ matrix.target }}/release/${{ env.RUST_BIN_NAME }}${{ matrix.suffix }} .
+          mv target/${{ matrix.target }}/release/${{ env.RUST_BIN_NAME }}${{ matrix.suffix }}
           tar -cvzf ${{ matrix.target }}.tar.gz LICENSE README.md ${{ env.RUST_BIN_NAME }}${{ matrix.suffix }}
+      - name: Prepare assets (Linux)
+        shell: bash
+        if: contains(matrix.target, 'linux')
+        run: |
+          mv target/${{ matrix.target }}/release/fitgirl-ddl
+          tar -cvzf ${{ matrix.target }}.tar.gz LICENSE README.md fitgirl-ddl
       - name: Declare some variables
         id: vars
         shell: bash
