--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -66,13 +66,13 @@ jobs:
         shell: bash
         if: contains(matrix.target, 'linux') == false
         run: |
-          mv target/${{ matrix.target }}/release/${{ env.RUST_BIN_NAME }}${{ matrix.suffix }}
+          mv target/${{ matrix.target }}/release/${{ env.RUST_BIN_NAME }}${{ matrix.suffix }} .
           tar -cvzf ${{ matrix.target }}.tar.gz LICENSE README.md ${{ env.RUST_BIN_NAME }}${{ matrix.suffix }}
       - name: Prepare assets (Linux)
         shell: bash
         if: contains(matrix.target, 'linux')
         run: |
-          mv target/${{ matrix.target }}/release/fitgirl-ddl
+          mv target/${{ matrix.target }}/release/fitgirl-ddl .
           tar -cvzf ${{ matrix.target }}.tar.gz LICENSE README.md fitgirl-ddl
       - name: Declare some variables
         id: vars
