--- a/fitgirl-ddl-gui/Cargo.toml
+++ b/fitgirl-ddl-gui/Cargo.toml
@@ -15,4 +15,6 @@ futures-util = { workspace = true }
 itertools = { workspace = true }
 spdlog-rs = { workspace = true }
 
-winio = { git = "https://github.com/compio-rs/winio" }
+winio = { git = "https://github.com/compio-rs/winio", default-features = false, features = [
+    "gtk",
+] }
