feat: allow to switch backend for fitgirl-ddl-lib [ci skip]

--- a/fitgirl-ddl-lib/Cargo.toml
+++ b/fitgirl-ddl-lib/Cargo.toml
@@ -9,4 +9,12 @@ thiserror = "2.0.12"
 url = "2.5.4"
 nyquest = { version = "0.1.1", features = ["async"] }
 
-compio = { workspace = true }
+compio = { workspace = true, optional = true }
+tokio = { version = "1", default-features = false, features = [
+    "rt",
+], optional = true }
+
+[features]
+default = ["compio"]
+compio = ["dep:compio"]
+tokio = ["dep:tokio"]
