--- a/fitgirl-ddl-gui/Cargo.toml
+++ b/fitgirl-ddl-gui/Cargo.toml
@@ -15,7 +15,7 @@ futures-util = { workspace = true }
 itertools = { workspace = true }
 spdlog-rs = { workspace = true }
 
-winio = { git = "https://github.com/compio-rs/winio", default-features = false }
+winio = { git = "https://github.com/compio-rs/winio", default-features = false, version = "0.4.0" }
 ahash = "0.8.12"
 
 [features]
