--- a/fitgirl-ddl-gui/Cargo.toml
+++ b/fitgirl-ddl-gui/Cargo.toml
@@ -20,6 +20,9 @@ winio = { git = "https://github.com/compio-rs/winio", default-features = false, 
 ] }
 ahash = "0.8.12"
 
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
+
 [features]
 default = ["gtk", "dark-mode"]
 gtk = ["winio/gtk"]
