--- a/fitgirl-ddl-gui/Cargo.toml
+++ b/fitgirl-ddl-gui/Cargo.toml
@@ -16,7 +16,7 @@ futures-util = { workspace = true }
 itertools = { workspace = true }
 spdlog-rs = { workspace = true }
 
-winio = { git = "https://github.com/compio-rs/winio", default-features = false, version = "0.6.0" }
+winio = { git = "https://github.com/compio-rs/winio", default-features = false, version = "0.7.0-beta.2" }
 ahash = "0.8.12"
 
 serde = { version = "1.0.219", features = ["derive"] }
