--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,8 +6,33 @@ on:
 permissions:
   contents: write
 jobs:
-  release:
+  create-release:
+    name: Create Release
+    runs-on: ubuntu-latest
+    outputs:
+      rev_count: ${{ steps.vars.outputs.rev_count }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: '0'
+      - name: Get revision count
+        id: vars
+        shell: bash
+        run: |
+          rev_count=$(git rev-list --count HEAD)
+          echo "rev_count=${rev_count}" >> $GITHUB_OUTPUT
+      - name: Create Release
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: r${{ steps.vars.outputs.rev_count }}
+          prerelease: false
+          make_latest: true
+          draft: true  # Create as draft first, will be published when assets are ready
+
+  build-and-upload:
     name: Release on ${{ matrix.target }}
+    needs: create-release
     runs-on: ${{ matrix.os }}
     env:
       RUST_BIN_NAME: "fitgirl-ddl{,_gui}"
@@ -39,13 +64,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          # fix revision count
-          fetch-depth: '0'
       - uses: Swatinem/rust-cache@v2
         with:
-          # The prefix cache key, this can be changed to start a new cache manually.
-          # default: "v0-rust"
           prefix-key: ${{ matrix.target }}
           shared-key: "main"
       - name: Build binary
@@ -74,16 +94,8 @@ jobs:
         run: |
           mv target/${{ matrix.target }}/release/fitgirl-ddl .
           tar -cvzf ${{ matrix.target }}.tar.gz LICENSE README.md fitgirl-ddl
-      - name: Declare some variables
-        id: vars
-        shell: bash
-        run: |
-          rev_count=$(git rev-list --count HEAD)
-          echo rev_count=${rev_count} >> $GITHUB_OUTPUT
       - name: Upload to Release
         uses: softprops/action-gh-release@v2
         with:
           files: ${{ matrix.target }}.tar.gz
-          tag_name: r${{ steps.vars.outputs.rev_count }}
-          prerelease: false
-          make_latest: true
+          tag_name: r${{ needs.create-release.outputs.rev_count }}
