--- a/fitgirl-ddl-lib/Cargo.toml
+++ b/fitgirl-ddl-lib/Cargo.toml
@@ -2,6 +2,8 @@
 name = "fitgirl-ddl-lib"
 version = "0.2.0"
 edition = "2024"
+license = "MIT"
+description = "extract DDL from fitgirl-repacks.site"
 
 [dependencies]
 scraper = { version = "0.23.1", features = ["atomic"] }
