--- a/fitgirl-ddl-gui/Cargo.toml
+++ b/fitgirl-ddl-gui/Cargo.toml
@@ -23,8 +23,10 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 
 [features]
-default = ["gtk", "dark-mode"]
+default = ["gtk", "win32", "dark-mode"]
 gtk = ["winio/gtk"]
 qt = ["winio/qt"]
+win32 = ["winio/win32"]
+winui = ["winio/winui"]
 
 dark-mode = ["winio/win32-dark-mode"]
