--- a/fitgirl-ddl-gui/Cargo.toml
+++ b/fitgirl-ddl-gui/Cargo.toml
@@ -16,11 +16,11 @@ futures-util = { workspace = true }
 itertools = { workspace = true }
 spdlog-rs = { workspace = true }
 
-winio = { version = "0.8.2", default-features = false }
 ahash = "0.8.12"
 
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
+winio = { git = "https://github.com/compio-rs/winio", default-features = false}
 
 [features]
 default = ["gtk", "win32", "dark-mode"]
