--- a/fitgirl-ddl-gui/Cargo.toml
+++ b/fitgirl-ddl-gui/Cargo.toml
@@ -21,7 +21,9 @@ ahash = "0.8.12"
 
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
-winio = { git = "https://github.com/compio-rs/winio", default-features = false }
+winio = { git = "https://github.com/compio-rs/winio", default-features = false, features = [
+    "enable_log",
+] }
 
 [features]
 default = ["gtk", "win32", "dark-mode"]
