--- a/fitgirl-ddl-cli/Cargo.toml
+++ b/fitgirl-ddl-cli/Cargo.toml
@@ -14,6 +14,10 @@ nyquest-preset = { workspace = true }
 futures-util = { workspace = true }
 itertools = { workspace = true }
 tracing = { workspace = true }
-tracing-subscriber = { workspace = true }
 
 argh = "0.1.13"
+tracing-subscriber = { version = "0.3.20", default-features = false, features = [
+    "env-filter",
+    "std",
+    "ansi",
+] }
