--- a/fitgirl-ddl-gui/Cargo.toml
+++ b/fitgirl-ddl-gui/Cargo.toml
@@ -15,14 +15,18 @@ compio = { workspace = true, features = ["time"] }
 futures-util = { workspace = true }
 itertools = { workspace = true }
 tracing = { workspace = true }
-tracing-subscriber = { workspace = true }
-
 ahash = "0.8.12"
 
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 winio = { version = "0.9.1", default-features = false, features = [
     "enable_log",
+] }
+
+tracing-subscriber = { version = "0.3.20", default-features = false, features = [
+    "env-filter",
+    "std",
+    "fmt",
 ] }
 
 [features]
