only perform build on new tag

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,7 +1,8 @@
 name: Build Releases
 on:
   push:
-    branches: [master]
+    tags:
+      - '*'
 permissions:
   contents: write
 jobs:
@@ -29,7 +30,6 @@ jobs:
           prerelease: false
           make_latest: true
           draft: true
-
   build-and-upload:
     name: Build and Upload for ${{ matrix.target }}
     needs: create-release
@@ -83,10 +83,9 @@ jobs:
         with:
           files: ${{ matrix.target }}.tar.gz
           tag_name: r${{ needs.create-release.outputs.rev_count }}
-
   publish-release:
     name: Publish Release
-    needs: 
+    needs:
       - create-release
       - build-and-upload
     runs-on: ubuntu-latest
