chore(deps): bump dependencies

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,8 @@ opt-level = "s"
 
 [workspace.dependencies]
 fitgirl-ddl-lib = { path = "./fitgirl-ddl-lib" }
-nyquest-preset = { version = "0.3.0", features = ["async"] }
+nyquest = { version = "0.4.0", features = ["async"] }
+nyquest-preset = { version = "0.4.0", features = ["async"] }
 compio = { version = "0.17.0", default-features = false, features = [
     "runtime",
     "io-uring",
