--- a/fitgirl-ddl-lib/Cargo.toml
+++ b/fitgirl-ddl-lib/Cargo.toml
@@ -6,12 +6,13 @@ license = "MIT"
 description = "extract DDL from fitgirl-repacks.site"
 
 [dependencies]
-scraper = { version = "0.24.0", features = ["atomic"] }
+scraper = { version = "0.25.0", features = ["atomic"] }
 thiserror = "2.0.12"
 url = "2.5.4"
-nyquest = { version = "0.3.0", features = ["async"] }
 
+nyquest = { workspace = true }
 compio = { workspace = true, optional = true }
+
 tokio = { version = "1", default-features = false, features = [
     "rt",
 ], optional = true }
