--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ panic = "abort"
 opt-level = "s"
 
 [workspace.dependencies]
+scraper = { version = "0.25.0", features = ["atomic"] }
 fitgirl-ddl-lib = { path = "./fitgirl-ddl-lib" }
 nyquest = { version = "0.4.0", features = ["async"] }
 nyquest-preset = { version = "0.4.0", features = ["async"] }
