--- a/fitgirl-ddl-cli/Cargo.toml
+++ b/fitgirl-ddl-cli/Cargo.toml
@@ -22,3 +22,4 @@ tracing-subscriber = { version = "0.3.20", default-features = false, features = 
     "std",
     "ansi",
 ] }
+chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
