--- a/fitgirl-ddl-cli/Cargo.toml
+++ b/fitgirl-ddl-cli/Cargo.toml
@@ -23,3 +23,4 @@ tracing-subscriber = { version = "0.3.20", default-features = false, features = 
     "ansi",
 ] }
 chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
+richrs = "0.2.1"
