--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,24 +9,14 @@ jobs:
   create-release:
     name: Create Release
     runs-on: ubuntu-latest
-    outputs:
-      rev_count: ${{ steps.vars.outputs.rev_count }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          fetch-depth: '0'
-      - name: Get revision count
-        id: vars
-        shell: bash
-        run: |
-          rev_count=$(git rev-list --count HEAD)
-          echo "rev_count=${rev_count}" >> $GITHUB_OUTPUT
       - name: Create Draft Release
         id: create-release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: r${{ steps.vars.outputs.rev_count }}
+          tag_name: ${{ github.ref_name }}
           prerelease: false
           make_latest: true
           draft: true
@@ -74,7 +64,7 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: ${{ matrix.target }}.tar.gz
-          tag_name: r${{ needs.create-release.outputs.rev_count }}
+          tag_name: ${{ github.ref_name }}
   publish-release:
     name: Publish Release
     needs:
@@ -85,5 +75,5 @@ jobs:
       - name: Publish Release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: r${{ needs.create-release.outputs.rev_count }}
+          tag_name: ${{ github.ref_name }}
           draft: false
